# controllers/transactions.js
@@ -34,8 +34,67 @@ const createTransaction = async (req, res) => {
         const response = await transaction.save();
         res.status(201).json(response);
     } catch (err) {
+        if (err.name === 'ValidationError') {
+            return res.status(400).json({ message: err.message });
+        }
         res.status(500).json({ message: err.message });
     }
 };
 
-module.exports = { getAll, createTransaction };
+// Update a transaction
+const updateTransaction = async (req, res) => {
+    /* #swagger.tags = ['Transactions'] */
+    try {
+        const transactionId = req.params.id;
+        const response = await Transaction.findByIdAndUpdate(transactionId, req.body, { new: true, runValidators: true });
+
+        if (!response) {
+            res.status(404).json({ message: 'Transaction not found' });
+        } else {
+            res.status(204).send();
+        }
+    } catch (err) {
+        if (err.name === 'ValidationError') {
+            return res.status(400).json({ message: err.message });
+        }
+        res.status(500).json({ message: err.message });
+    }
+};
+
+// Delete a transaction
+const deleteTransaction = async (req, res) => {
+    /* #swagger.tags = ['Transactions'] */
+    try {
+        const transactionId = req.params.id;
+        const response = await Transaction.findByIdAndDelete(transactionId);
+
+        if (!response) {
+            res.status(404).json({ message: 'Transaction not found' });
+        } else {
+            res.status(200).json({ message: `Transaction ${transactionId} deleted successfully` });
+        }
+    } catch (err) {
+        res.status(500).json({ message: err.message });
+    }
+};
+
+// Get a transaction by ID
+const getTransactionById = async (req, res) => {
+    try {
+        const transactionId = req.params.id;
+        const transaction = await Transaction.findById(transactionId);
+        if (!transaction) {
+            return res.status(404).json({ message: 'Transaction not found' });
+        }
+        res.status(200).json(transaction);
+    } catch (err) {
+        res.status(500).json({ message: err.message });
+    }
+};
+
+
+
+module.exports = {
+    getAll, getTransactionById, createTransaction, updateTransaction,
+    deleteTransaction
+};
